--- a/css/navbar.css
+++ b/css/navbar.css
@@ -38,6 +38,7 @@ li {
   font-family: Verdana;
 }
 
+
 nav ul {
 	list-style-type: none;
 	margin: 0;
@@ -163,9 +164,11 @@ img.Josh{
 
 /* Mobile Styles */
 @media only screen and (max-width: 400px) {
+  html {
+    scroll-padding-top: 20px;
+  }
+  
   body{
-    scroll-padding-top: 200px;
-    padding-top: 200px;
     width: 100%
   }
 
@@ -175,6 +178,10 @@ img.Josh{
     height: auto;
   }
 
+  nav li {
+    display: inline;
+    float: left;
+  }
 
 }
 
